force-app/main/default/objects/SAJ_Environment__c/SAJ_Environment__c.object-meta.xml
<CustomObject>
    <description>This object manages all the orgs or environments within your governance model</description>
    <label>Environment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Environment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>