force-app/main/default/objects/SAJ_Environment__c/fields/SAJ_Active__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>