force-app/main/default/objects/SAJ_Environment__c/fields/SAJ_Allocation_start_date__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Allocation_start_date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Attribute to store the start date of allocation</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Allocation Start Date</label>
    <type>Date</type>
</CustomField>