force-app/main/default/objects/SAJ_Environment__c/fields/SAJ_Comments__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>