force-app/main/default/objects/SAJ_Environment__c/fields/SAJ_DayCount__c.field-meta.xml
<CustomField>
    <fullName>SAJ_DayCount__c</fullName>
    <formula>SAJ_Updated_Allocation_End_date__c - TODAY()</formula>
    <label>DayCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>