force-app/main/default/objects/SAJ_Environment__c/fields/SAJ_Delivery_Partner__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Delivery_Partner__c</fullName>
    <label>Delivery Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SAJ_Delivery_Partner</valueSetName>
    </valueSet>
</CustomField>