force-app/main/default/objects/SAJ_Environment__c/fields/SAJ_Description__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>