force-app/main/default/objects/SAJ_Environment__c/fields/SAJ_Environment_Manager__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Environment_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Environment Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SAJ_Environment_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>