force-app/main/default/objects/SAJ_Environment__c/fields/SAJ_Initial_Allocation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Initial_Allocation_End_Date__c</fullName>
    <description>Initially agreed termination date for the sandbox</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Initial Allocation End Date</label>
    <type>Date</type>
</CustomField>