force-app/main/default/objects/SAJ_Environment__c/fields/SAJ_isAvailable__c.field-meta.xml
<CustomField>
    <fullName>SAJ_isAvailable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Boolean to identify if environment is available</description>
    <label>is available</label>
    <type>Checkbox</type>
</CustomField>