force-app/main/default/objects/SAJ_Environment__c/fields/SAJ_Last_Refresh__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Last_Refresh__c</fullName>
    <description>Datetime stamp of last refresh of the environment</description>
    <label>Last Refresh</label>
    <type>DateTime</type>
</CustomField>