force-app/main/default/objects/SAJ_Environment__c/fields/SAJ_Last_Release__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Last_Release__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Release</label>
    <length>25</length>
    <type>Text</type>
</CustomField>