force-app/main/default/objects/SAJ_Environment__c/fields/SAJ_Latest__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Latest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean flag to identify if snapshot is latest</description>
    <label>Latest ?</label>
    <type>Checkbox</type>
</CustomField>