force-app/main/default/objects/SAJ_Environment__c/fields/SAJ_Lead_Admin__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Lead_Admin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead Admin for the environment</description>
    <inlineHelpText>Lead Admin for the environment</inlineHelpText>
    <label>Lead Admin</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SAJ_Environment</relationshipName>
    <type>Lookup</type>
</CustomField>