force-app/main/default/objects/SAJ_Environment__c/fields/SAJ_Logged_In__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Logged_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean flag to identify if Login was successful.</description>
    <label>Logged In?</label>
    <type>Checkbox</type>
</CustomField>