force-app/main/default/objects/SAJ_Environment__c/fields/SAJ_Number_of_times_extended__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Number_of_times_extended__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of times extended</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>