force-app/main/default/objects/SAJ_Environment__c/fields/SAJ_Org_ID__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Org_ID__c</fullName>
    <description>Unique Salesforce Org Identifier (15 Digit)</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Org ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>