force-app/main/default/objects/SAJ_Environment__c/fields/SAJ_Org_Name__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Org_Name__c</fullName>
    <description>To store sandbox belong to which environment.</description>
    <label>Org Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>sfdc-ent-dev</fullName>
            </value>
            <value>
                <fullName>sfdc-eu-dev</fullName>
            </value>
            <value>
                <fullName>sfdc-seaa-dev</fullName>
            </value>
            <value>
                <fullName>sfdc-ams-dev</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>