force-app/main/default/objects/SAJ_Environment__c/fields/SAJ_Org_Type__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Org_Type__c</fullName>
    <description>Attribute to store the type of environment</description>
    <label>Org Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SAJ_Org_Types</valueSetName>
    </valueSet>
</CustomField>