force-app/main/default/objects/SAJ_Environment__c/fields/SAJ_Org_URL__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Org_URL__c</fullName>
    <description>Attribute to store the URL of environment</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Org URL</label>
    <type>Url</type>
</CustomField>