force-app/main/default/objects/SAJ_Environment__c/fields/SAJ_Password__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Password__c</fullName>
    <description>Password of the user used for authentication</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>