force-app/main/default/objects/SAJ_Environment__c/fields/SAJ_Pre_Release_Org__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Pre_Release_Org__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Release Org</label>
    <type>Checkbox</type>
</CustomField>