force-app/main/default/objects/SAJ_Environment__c/fields/SAJ_Primary_Use__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Primary_Use__c</fullName>
    <label>Primary Use</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SAJ_Tier__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>Staging</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>System Testing</fullName>
            </value>
            <value>
                <fullName>Systems Integration Testing</fullName>
            </value>
            <value>
                <fullName>Data Migration Testing</fullName>
            </value>
            <value>
                <fullName>User Acceptance Testing</fullName>
            </value>
            <value>
                <fullName>Load &amp; Performance Testing</fullName>
            </value>
            <value>
                <fullName>Regression Testing</fullName>
            </value>
            <value>
                <fullName>Proof of Concept</fullName>
            </value>
            <value>
                <fullName>Pilot</fullName>
            </value>
            <value>
                <fullName>Continuous Integration</fullName>
            </value>
            <value>
                <fullName>Citizen Dev Creche</fullName>
            </value>
            <value>
                <fullName>Metadata Copy</fullName>
            </value>
            <value>
                <fullName>Pre-Release</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Pre-Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>