force-app/main/default/objects/SAJ_Environment__c/fields/SAJ_Salesforce_Courtesy__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Salesforce_Courtesy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salesforce Courtesy</label>
    <type>Checkbox</type>
</CustomField>