force-app/main/default/objects/SAJ_Environment__c/fields/SAJ_Salesforce_Courtesy_Days__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Salesforce_Courtesy_Days__c</fullName>
    <description>Formula field that shows number of Salesforce Courtesy Days</description>
    <formula>SAJ_Salesforce_Courtesy_End__c  -  SAJ_Salesforce_Courtesy_Start__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field that shows number of Salesforce Courtesy Days counted from salesforce courtesy start date to end date</inlineHelpText>
    <label>Salesforce Courtesy Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>