force-app/main/default/objects/SAJ_Environment__c/fields/SAJ_Salesforce_Courtesy_End__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Salesforce_Courtesy_End__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Salesforce Courtesy End</label>
    <type>Date</type>
</CustomField>