force-app/main/default/objects/SAJ_Environment__c/fields/SAJ_Status__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SAJ_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Deployed-OK</fullName>
            </value>
            <value>
                <fullName>Deployed-Failed</fullName>
            </value>
            <value>
                <fullName>Deploying</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Creating</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Building</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
            <value>
                <fullName>Rebuild</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Deleting</fullName>
            </value>
            <value>
                <fullName>Cloning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>