force-app/main/default/objects/SAJ_Environment__c/fields/SAJ_Tier__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Tier__c</fullName>
    <label>Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Common</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>