force-app/main/default/objects/SAJ_Environment__c/fields/SAJ_Type__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Type__c</fullName>
    <description>Attribute to store the type of sandbox(Allowed values: Validation,CQA,Preprod,Production)</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Validation</fullName>
            </value>
            <value>
                <fullName>CQA</fullName>
            </value>
            <value>
                <fullName>Preprod</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Sandbox</fullName>
            </value>
            <value>
                <fullName>Shared QA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>