force-app/main/default/objects/SAJ_Environment__c/fields/SAJ_Updated_Allocation_End_date__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Updated_Allocation_End_date__c</fullName>
    <description>Updated view of the Org termination date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter (updated) allocation termination date on the org</inlineHelpText>
    <label>updated Allocation End date</label>
    <type>Date</type>
</CustomField>