force-app/main/default/objects/SAJ_Environment__c/fields/SAJ_Username__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Username__c</fullName>
    <description>User used for authentication</description>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>