force-app/main/default/objects/SAJ_Environment__c/fields/SRT_App__c.field-meta.xml
<CustomField>
    <fullName>SRT_App__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>App</label>
    <referenceTo>SAJ_App__c</referenceTo>
    <relationshipLabel>Environment</relationshipLabel>
    <relationshipName>Environment</relationshipName>
    <type>Lookup</type>
</CustomField>