force-app/main/default/objects/SAJ_Environment__c/fields/SRT_Lead_System_Admin_Field__c.field-meta.xml
<CustomField>
    <fullName>SRT_Lead_System_Admin_Field__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead System Admin Field</label>
    <type>Email</type>
</CustomField>