force-app/main/default/objects/SAJ_Environment__c/fields/SRT_Operation__c.field-meta.xml
<CustomField>
    <fullName>SRT_Operation__c</fullName>
    <label>Operation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>Refresh</fullName>
            </value>
            <value>
                <fullName>Create</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>