force-app/main/default/objects/SAJ_Environment__c/fields/SRT_Sandbox_Description__c.field-meta.xml
<CustomField>
    <fullName>SRT_Sandbox_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sandbox Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>