force-app/main/default/objects/SAJ_Environment__c/fields/SRT_Sandbox_Response__c.field-meta.xml
<CustomField>
    <fullName>SRT_Sandbox_Response__c</fullName>
    <description>Field Will Be Used To Store Response Received From Tooling API</description>
    <label>Sandbox Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>