force-app/main/default/objects/SAJ_Environment__c/fields/SRT_Status__c.field-meta.xml
<CustomField>
    <fullName>SRT_Status__c</fullName>
    <description>Attribute to store the status of sandbox(Allowed values: Pending Activation,Completed,Deleted)</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending Activation</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>