force-app/main/default/objects/SAJ_Environment__c/recordTypes/SAJ_Managed_Org.recordType-meta.xml
<RecordType>
    <fullName>SAJ_Managed_Org</fullName>
    <active>true</active>
    <description>Details of Managed Orgs - SharedQA, PreProd, Prod</description>
    <label>Managed</label>
</RecordType>