force-app/main/default/objects/SAJ_Environment__c/recordTypes/SAJ_Sandbox.recordType-meta.xml
<RecordType>
    <fullName>SAJ_Sandbox</fullName>
    <active>true</active>
    <description>Captures Salesforce sandbox details</description>
    <label>Sandbox</label>
</RecordType>