force-app/main/default/objects/SAJ_Environment__c/recordTypes/SAJ_ScratchOrg.recordType-meta.xml
<RecordType>
    <fullName>SAJ_ScratchOrg</fullName>
    <active>true</active>
    <description>Capture SalesforceDX Scratch Orgs details used for Validation</description>
    <label>ScratchOrg</label>
</RecordType>