force-app/main/default/objects/SAJ_Environment__c/recordTypes/SAJ_Snapshot.recordType-meta.xml
<RecordType>
    <fullName>SAJ_Snapshot</fullName>
    <active>true</active>
    <description>Details of snapshot profile.</description>
    <label>Snapshot</label>
</RecordType>