force-app/main/default/objects/SAJ_Environment__c/validationRules/SAJ_Allow_Environments.validationRule-meta.xml
<ValidationRule>
    <fullName>SAJ_Allow_Environments</fullName>
    <active>true</active>
    <errorConditionFormula>IF($Permission.SAJ_ALM_Project_Release_Manager, FALSE, (IF($Permission.SAJ_ALM_CTT_Architect &amp;&amp; RecordType.DeveloperName=&apos;SAJ_Snapshot&apos;,FALSE,TRUE)))</errorConditionFormula>
    <errorMessage>You are not authorized to create/update Environment records. Please contact System Administrator</errorMessage>
</ValidationRule>